--- a/RESPreProcess.ipynb
+++ b/RESPreProcess.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Python 3.11.5' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import neurokit2 as nk\n",
@@ -34,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workDir = 'D:/LAB/放鬆-三總/Relaxing/分析'\n",
+    "workDir = r'C:\\Users\\kein9\\OneDrive\\桌面\\LAB\\RelaxingBC_AC'\n",
     "os.chdir(workDir)"
    ]
   },
@@ -62,9 +53,9 @@
     "sampleRate = 200\n",
     "# stagePoint = [-1080*sampleRate, -780*sampleRate, -300*sampleRate,]\n",
     "\n",
-    "inputPath = \"Data3group/RES/\"\n",
-    "rriPath = \"Data3group/RRI/\"\n",
-    "featureOutputPath = \"Feature3group/\"\n",
+    "inputPath = \"DataBC&AC/BC/RES/\"\n",
+    "rriPath = \"DataBC&AC/BC/RRI/\"\n",
+    "featureOutputPath = \"FeatureBC&AC/BC/\"\n",
     "\n",
     "dataInfoOld = ['A01', 'A02', 'A03', 'A04',\n",
     "               'N01', 'N02', 'N03', 'N04', 'N05', 'N06', 'N08', 'N09', 'N10']\n",
@@ -161,7 +152,7 @@
     "        else:\n",
     "            features = feature_Cal(data, 20, 'RESdata')\n",
     "        # name = name.append({\"data_name\" : \"%s_%s\"%(dataName[:-4], testState[i])}, ignore_index= True)\n",
-    "        datanameDF = pd.DataFrame({\"data_name\" : [\"%s%s_%s\"%(dataInfo[0], dataInfo[1][0], dataInfo[3][:-4])]})\n",
+    "        datanameDF = pd.DataFrame({\"data_name\" : [\"%s%s_%s\"%(dataInfo[0], dataInfo[1], dataInfo[3][:-4])]})\n",
     "        name = pd.concat([name, datanameDF], axis=0, ignore_index=True)\n",
     "        # result = result.append(features, ignore_index=True)\n",
     "        result = pd.concat([result, pd.DataFrame(features, index=[0])], axis=0, ignore_index=True)\n",
@@ -186,28 +177,429 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data_name</th>\n",
+       "      <th>RRV_RMSSD</th>\n",
+       "      <th>RRV_MeanBB</th>\n",
+       "      <th>RRV_SDBB</th>\n",
+       "      <th>RRV_SDSD</th>\n",
+       "      <th>RRV_CVBB</th>\n",
+       "      <th>RRV_CVSD</th>\n",
+       "      <th>RRV_MedianBB</th>\n",
+       "      <th>RRV_MadBB</th>\n",
+       "      <th>RRV_MCVBB</th>\n",
+       "      <th>...</th>\n",
+       "      <th>RRV_MFDFA_alpha2_Width</th>\n",
+       "      <th>RRV_MFDFA_alpha2_Peak</th>\n",
+       "      <th>RRV_MFDFA_alpha2_Mean</th>\n",
+       "      <th>RRV_MFDFA_alpha2_Max</th>\n",
+       "      <th>RRV_MFDFA_alpha2_Delta</th>\n",
+       "      <th>RRV_MFDFA_alpha2_Asymmetry</th>\n",
+       "      <th>RRV_MFDFA_alpha2_Fluctuation</th>\n",
+       "      <th>RRV_MFDFA_alpha2_Increment</th>\n",
+       "      <th>addictLabel</th>\n",
+       "      <th>stateLabel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A107VR_Post</td>\n",
+       "      <td>4504.735022</td>\n",
+       "      <td>7421.363636</td>\n",
+       "      <td>3753.026052</td>\n",
+       "      <td>4525.430512</td>\n",
+       "      <td>0.505706</td>\n",
+       "      <td>0.606996</td>\n",
+       "      <td>6975.0</td>\n",
+       "      <td>3521.175</td>\n",
+       "      <td>0.504828</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.816007</td>\n",
+       "      <td>0.656882</td>\n",
+       "      <td>0.714846</td>\n",
+       "      <td>0.211034</td>\n",
+       "      <td>-0.239898</td>\n",
+       "      <td>-0.428966</td>\n",
+       "      <td>7.167800e-05</td>\n",
+       "      <td>0.033848</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A107VR_Pre</td>\n",
+       "      <td>5306.368165</td>\n",
+       "      <td>8500.000000</td>\n",
+       "      <td>4394.392979</td>\n",
+       "      <td>5350.695024</td>\n",
+       "      <td>0.516987</td>\n",
+       "      <td>0.624279</td>\n",
+       "      <td>8600.0</td>\n",
+       "      <td>5559.750</td>\n",
+       "      <td>0.646483</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A10VR_Post</td>\n",
+       "      <td>4879.652952</td>\n",
+       "      <td>8664.957265</td>\n",
+       "      <td>3740.950373</td>\n",
+       "      <td>4900.822434</td>\n",
+       "      <td>0.431733</td>\n",
+       "      <td>0.563148</td>\n",
+       "      <td>8450.0</td>\n",
+       "      <td>2149.770</td>\n",
+       "      <td>0.254411</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.509769</td>\n",
+       "      <td>0.330786</td>\n",
+       "      <td>0.402343</td>\n",
+       "      <td>0.351083</td>\n",
+       "      <td>-0.360120</td>\n",
+       "      <td>-0.359627</td>\n",
+       "      <td>1.576455e-05</td>\n",
+       "      <td>0.011949</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A10VR_Pre</td>\n",
+       "      <td>3556.880324</td>\n",
+       "      <td>8287.109375</td>\n",
+       "      <td>2567.369791</td>\n",
+       "      <td>3570.962112</td>\n",
+       "      <td>0.309803</td>\n",
+       "      <td>0.429206</td>\n",
+       "      <td>8200.0</td>\n",
+       "      <td>1927.380</td>\n",
+       "      <td>0.235046</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.262962</td>\n",
+       "      <td>0.553286</td>\n",
+       "      <td>0.549314</td>\n",
+       "      <td>0.714547</td>\n",
+       "      <td>0.022981</td>\n",
+       "      <td>-0.515106</td>\n",
+       "      <td>7.895340e-08</td>\n",
+       "      <td>0.002303</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A111VR_Post</td>\n",
+       "      <td>5300.039974</td>\n",
+       "      <td>8139.075630</td>\n",
+       "      <td>4188.736712</td>\n",
+       "      <td>5322.450394</td>\n",
+       "      <td>0.514645</td>\n",
+       "      <td>0.651185</td>\n",
+       "      <td>7400.0</td>\n",
+       "      <td>3632.370</td>\n",
+       "      <td>0.490861</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.441064</td>\n",
+       "      <td>0.557159</td>\n",
+       "      <td>0.565593</td>\n",
+       "      <td>0.515296</td>\n",
+       "      <td>-0.050677</td>\n",
+       "      <td>-0.480878</td>\n",
+       "      <td>1.218143e-06</td>\n",
+       "      <td>0.007174</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>A6VR_Pre</td>\n",
+       "      <td>4485.961007</td>\n",
+       "      <td>7045.762712</td>\n",
+       "      <td>4043.643192</td>\n",
+       "      <td>4503.894572</td>\n",
+       "      <td>0.573911</td>\n",
+       "      <td>0.636689</td>\n",
+       "      <td>6000.0</td>\n",
+       "      <td>3187.590</td>\n",
+       "      <td>0.531265</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.652105</td>\n",
+       "      <td>0.580555</td>\n",
+       "      <td>0.685890</td>\n",
+       "      <td>0.102260</td>\n",
+       "      <td>-0.526421</td>\n",
+       "      <td>-0.338470</td>\n",
+       "      <td>2.104971e-05</td>\n",
+       "      <td>0.018653</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>A7VR_Post</td>\n",
+       "      <td>4255.125908</td>\n",
+       "      <td>7267.391304</td>\n",
+       "      <td>3632.094048</td>\n",
+       "      <td>4273.864385</td>\n",
+       "      <td>0.499780</td>\n",
+       "      <td>0.585509</td>\n",
+       "      <td>6050.0</td>\n",
+       "      <td>1779.120</td>\n",
+       "      <td>0.294069</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.931751</td>\n",
+       "      <td>0.632401</td>\n",
+       "      <td>0.638828</td>\n",
+       "      <td>0.142727</td>\n",
+       "      <td>-0.022903</td>\n",
+       "      <td>-0.493102</td>\n",
+       "      <td>3.754591e-05</td>\n",
+       "      <td>0.038175</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>A7VR_Pre</td>\n",
+       "      <td>4485.934157</td>\n",
+       "      <td>7658.333333</td>\n",
+       "      <td>3879.437471</td>\n",
+       "      <td>4509.321874</td>\n",
+       "      <td>0.506564</td>\n",
+       "      <td>0.585759</td>\n",
+       "      <td>6175.0</td>\n",
+       "      <td>3113.460</td>\n",
+       "      <td>0.504204</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.702754</td>\n",
+       "      <td>0.619241</td>\n",
+       "      <td>0.827314</td>\n",
+       "      <td>-0.058983</td>\n",
+       "      <td>-0.893571</td>\n",
+       "      <td>-0.203919</td>\n",
+       "      <td>1.278859e-04</td>\n",
+       "      <td>0.030224</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>A9VR_Post</td>\n",
+       "      <td>3821.096701</td>\n",
+       "      <td>7125.000000</td>\n",
+       "      <td>2734.657200</td>\n",
+       "      <td>3836.460272</td>\n",
+       "      <td>0.383812</td>\n",
+       "      <td>0.536294</td>\n",
+       "      <td>6900.0</td>\n",
+       "      <td>1927.380</td>\n",
+       "      <td>0.279330</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.390663</td>\n",
+       "      <td>0.660760</td>\n",
+       "      <td>0.738318</td>\n",
+       "      <td>0.408910</td>\n",
+       "      <td>-0.402400</td>\n",
+       "      <td>-0.301470</td>\n",
+       "      <td>8.008094e-06</td>\n",
+       "      <td>0.006742</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>A9VR_Pre</td>\n",
+       "      <td>4864.543471</td>\n",
+       "      <td>9182.456140</td>\n",
+       "      <td>4032.763949</td>\n",
+       "      <td>4885.713656</td>\n",
+       "      <td>0.439181</td>\n",
+       "      <td>0.529765</td>\n",
+       "      <td>8425.0</td>\n",
+       "      <td>2409.225</td>\n",
+       "      <td>0.285961</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.582009</td>\n",
+       "      <td>0.758318</td>\n",
+       "      <td>0.556353</td>\n",
+       "      <td>0.843871</td>\n",
+       "      <td>0.876276</td>\n",
+       "      <td>-0.847013</td>\n",
+       "      <td>9.725643e-05</td>\n",
+       "      <td>0.019923</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>78 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      data_name    RRV_RMSSD   RRV_MeanBB     RRV_SDBB     RRV_SDSD  RRV_CVBB  \\\n",
+       "0   A107VR_Post  4504.735022  7421.363636  3753.026052  4525.430512  0.505706   \n",
+       "1    A107VR_Pre  5306.368165  8500.000000  4394.392979  5350.695024  0.516987   \n",
+       "2    A10VR_Post  4879.652952  8664.957265  3740.950373  4900.822434  0.431733   \n",
+       "3     A10VR_Pre  3556.880324  8287.109375  2567.369791  3570.962112  0.309803   \n",
+       "4   A111VR_Post  5300.039974  8139.075630  4188.736712  5322.450394  0.514645   \n",
+       "..          ...          ...          ...          ...          ...       ...   \n",
+       "73     A6VR_Pre  4485.961007  7045.762712  4043.643192  4503.894572  0.573911   \n",
+       "74    A7VR_Post  4255.125908  7267.391304  3632.094048  4273.864385  0.499780   \n",
+       "75     A7VR_Pre  4485.934157  7658.333333  3879.437471  4509.321874  0.506564   \n",
+       "76    A9VR_Post  3821.096701  7125.000000  2734.657200  3836.460272  0.383812   \n",
+       "77     A9VR_Pre  4864.543471  9182.456140  4032.763949  4885.713656  0.439181   \n",
+       "\n",
+       "    RRV_CVSD  RRV_MedianBB  RRV_MadBB  RRV_MCVBB  ...  RRV_MFDFA_alpha2_Width  \\\n",
+       "0   0.606996        6975.0   3521.175   0.504828  ...                0.816007   \n",
+       "1   0.624279        8600.0   5559.750   0.646483  ...                     NaN   \n",
+       "2   0.563148        8450.0   2149.770   0.254411  ...                0.509769   \n",
+       "3   0.429206        8200.0   1927.380   0.235046  ...                0.262962   \n",
+       "4   0.651185        7400.0   3632.370   0.490861  ...                0.441064   \n",
+       "..       ...           ...        ...        ...  ...                     ...   \n",
+       "73  0.636689        6000.0   3187.590   0.531265  ...                0.652105   \n",
+       "74  0.585509        6050.0   1779.120   0.294069  ...                0.931751   \n",
+       "75  0.585759        6175.0   3113.460   0.504204  ...                0.702754   \n",
+       "76  0.536294        6900.0   1927.380   0.279330  ...                0.390663   \n",
+       "77  0.529765        8425.0   2409.225   0.285961  ...                0.582009   \n",
+       "\n",
+       "    RRV_MFDFA_alpha2_Peak  RRV_MFDFA_alpha2_Mean  RRV_MFDFA_alpha2_Max  \\\n",
+       "0                0.656882               0.714846              0.211034   \n",
+       "1                     NaN                    NaN                   NaN   \n",
+       "2                0.330786               0.402343              0.351083   \n",
+       "3                0.553286               0.549314              0.714547   \n",
+       "4                0.557159               0.565593              0.515296   \n",
+       "..                    ...                    ...                   ...   \n",
+       "73               0.580555               0.685890              0.102260   \n",
+       "74               0.632401               0.638828              0.142727   \n",
+       "75               0.619241               0.827314             -0.058983   \n",
+       "76               0.660760               0.738318              0.408910   \n",
+       "77               0.758318               0.556353              0.843871   \n",
+       "\n",
+       "    RRV_MFDFA_alpha2_Delta  RRV_MFDFA_alpha2_Asymmetry  \\\n",
+       "0                -0.239898                   -0.428966   \n",
+       "1                      NaN                         NaN   \n",
+       "2                -0.360120                   -0.359627   \n",
+       "3                 0.022981                   -0.515106   \n",
+       "4                -0.050677                   -0.480878   \n",
+       "..                     ...                         ...   \n",
+       "73               -0.526421                   -0.338470   \n",
+       "74               -0.022903                   -0.493102   \n",
+       "75               -0.893571                   -0.203919   \n",
+       "76               -0.402400                   -0.301470   \n",
+       "77                0.876276                   -0.847013   \n",
+       "\n",
+       "    RRV_MFDFA_alpha2_Fluctuation  RRV_MFDFA_alpha2_Increment  addictLabel  \\\n",
+       "0                   7.167800e-05                    0.033848            1   \n",
+       "1                            NaN                         NaN            1   \n",
+       "2                   1.576455e-05                    0.011949            1   \n",
+       "3                   7.895340e-08                    0.002303            1   \n",
+       "4                   1.218143e-06                    0.007174            1   \n",
+       "..                           ...                         ...          ...   \n",
+       "73                  2.104971e-05                    0.018653            1   \n",
+       "74                  3.754591e-05                    0.038175            1   \n",
+       "75                  1.278859e-04                    0.030224            1   \n",
+       "76                  8.008094e-06                    0.006742            1   \n",
+       "77                  9.725643e-05                    0.019923            1   \n",
+       "\n",
+       "    stateLabel  \n",
+       "0            2  \n",
+       "1            0  \n",
+       "2            2  \n",
+       "3            0  \n",
+       "4            2  \n",
+       "..         ...  \n",
+       "73           0  \n",
+       "74           2  \n",
+       "75           0  \n",
+       "76           2  \n",
+       "77           0  \n",
+       "\n",
+       "[78 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "feature.to_csv('Feature3group/RES.csv')\n",
+    "feature.to_csv('FeatureBC&AC/BC/RES_test.csv')\n",
     "feature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_data = pd.read_csv(\"Feature3group/RES.csv\", header=0, index_col=0).drop(['RRV_SampEn', 'RRV_DFA_alpha1'], axis=1)\n",
-    "res_data.to_csv('Feature3group/RES_dc.csv')"
+    "res_data = pd.read_csv(\"FeatureBC&AC/BC/RES_test.csv\", header=0, index_col=0).drop(['RRV_SampEn', 'RRV_DFA_alpha1'], axis=1)\n",
+    "res_data.to_csv('FeatureBC&AC/BC/RES_dc_test.csv')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.11.5)",
+   "display_name": "venv (3.11.5)",
    "language": "python",
    "name": "python3"
   },
