--- a/GSRPreProcess.ipynb
+++ b/GSRPreProcess.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "#change work directory to Code\n",
-    "workDir = 'D:/LAB/放鬆-三總/Relaxing/分析'\n",
+    "workDir = r'C:\\Users\\kein9\\OneDrive\\桌面\\LAB\\RelaxingBC_AC'\n",
     "os.chdir(workDir)"
    ]
   },
@@ -49,13 +49,13 @@
     "# testDuration = [300, 480, 300]\n",
     "# stagePoint = [-1080*sampleRate, -780*sampleRate, -300*sampleRate,]\n",
     "\n",
-    "inputPath = \"Data3group/GSR/\"\n",
-    "featureOutputPath = \"Feature3group/\""
+    "inputPath = \"DataBC&AC/BC/GSR/\"\n",
+    "featureOutputPath = \"FeatureBC&AC/BC/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +73,9 @@
     "    onsets = []\n",
     "    peaks = []\n",
     "    for o_i in onsets_index:\n",
-    "        onsets.append(filtered[o_i])\n",
+    "        onsets.append(filtered[int(o_i)])\n",
     "    for p_i in peaks_index:\n",
-    "        peaks.append(filtered[p_i])\n",
+    "        peaks.append(filtered[int(p_i)])\n",
     "    onsets = np.array(onsets)\n",
     "    peaks = np.array(peaks)\n",
     "\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
     "        features = feature_Cal(data['GSRdata'])\n",
     "        # print(type(features)) #dict\n",
     "        # name = name.append({\"data_name\" : \"%s_%s\"%(dataInfo[0], dataInfo[2][:-4])}, ignore_index= True)\n",
-    "        datanameDF = pd.DataFrame({'data_name' : [\"%s%s_%s\"%(dataInfo[0], dataInfo[1][0], dataInfo[3][:-4])]})\n",
+    "        datanameDF = pd.DataFrame({'data_name' : [\"%s%s_%s\"%(dataInfo[0], dataInfo[1], dataInfo[3][:-4])]})\n",
     "        name = pd.concat([name, datanameDF], axis=0, ignore_index= True)\n",
     "        # result = result.append(features, ignore_index=True)\n",
     "        result = pd.concat([result, pd.DataFrame(features, index=[0])], axis=0, ignore_index=True)\n",
@@ -243,16 +243,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kein9\\AppData\\Local\\Temp\\ipykernel_24004\\1510505746.py:34: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  result = pd.concat([result, pd.DataFrame(features, index=[0])], axis=0, ignore_index=True)\n"
+     ]
+    }
+   ],
    "source": [
     "feature = CalGSRFeatures(inputPath, sampleRate=sampleRate, output=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -294,81 +303,81 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>A100C_Post</td>\n",
-       "      <td>0.000063</td>\n",
-       "      <td>61</td>\n",
-       "      <td>134.770492</td>\n",
-       "      <td>-3583.358189</td>\n",
-       "      <td>-3584.635388</td>\n",
-       "      <td>-3582.542013</td>\n",
-       "      <td>-3583.326907</td>\n",
-       "      <td>0.571061</td>\n",
-       "      <td>0.119507</td>\n",
-       "      <td>0.138504</td>\n",
+       "      <td>A107VR_Post</td>\n",
+       "      <td>-0.000105</td>\n",
+       "      <td>28691</td>\n",
+       "      <td>-3585.320182</td>\n",
+       "      <td>-3585.180548</td>\n",
+       "      <td>-3586.220854</td>\n",
+       "      <td>-3586.218921</td>\n",
+       "      <td>-3586.219654</td>\n",
+       "      <td>0.000605</td>\n",
+       "      <td>14373.236842</td>\n",
+       "      <td>8142.849865</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>A100C_Pre</td>\n",
-       "      <td>0.000063</td>\n",
-       "      <td>54</td>\n",
-       "      <td>164.796296</td>\n",
-       "      <td>-3594.970028</td>\n",
-       "      <td>-3602.947562</td>\n",
-       "      <td>-3591.435967</td>\n",
-       "      <td>-3594.891820</td>\n",
-       "      <td>2.228752</td>\n",
-       "      <td>0.560979</td>\n",
-       "      <td>1.072982</td>\n",
+       "      <td>A107VR_Pre</td>\n",
+       "      <td>0.000110</td>\n",
+       "      <td>27309</td>\n",
+       "      <td>-3592.435774</td>\n",
+       "      <td>-3592.229085</td>\n",
+       "      <td>-3590.603300</td>\n",
+       "      <td>-3590.587707</td>\n",
+       "      <td>-3590.593709</td>\n",
+       "      <td>0.004269</td>\n",
+       "      <td>12568.222222</td>\n",
+       "      <td>7615.645085</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>A101V_Post</td>\n",
-       "      <td>0.000375</td>\n",
-       "      <td>29</td>\n",
-       "      <td>138.620690</td>\n",
-       "      <td>-3483.293143</td>\n",
-       "      <td>-3496.745411</td>\n",
-       "      <td>-3460.077017</td>\n",
-       "      <td>-3483.226101</td>\n",
-       "      <td>10.858705</td>\n",
-       "      <td>1.586332</td>\n",
-       "      <td>5.138217</td>\n",
+       "      <td>A10VR_Post</td>\n",
+       "      <td>0.000094</td>\n",
+       "      <td>21384</td>\n",
+       "      <td>-3568.960999</td>\n",
+       "      <td>-3568.876654</td>\n",
+       "      <td>-3568.915714</td>\n",
+       "      <td>-3568.913622</td>\n",
+       "      <td>-3568.914792</td>\n",
+       "      <td>0.001039</td>\n",
+       "      <td>10971.125000</td>\n",
+       "      <td>5969.161786</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>A101V_Pre</td>\n",
-       "      <td>-0.000031</td>\n",
-       "      <td>61</td>\n",
-       "      <td>125.573770</td>\n",
-       "      <td>-3583.496463</td>\n",
-       "      <td>-3584.515202</td>\n",
-       "      <td>-3582.359135</td>\n",
-       "      <td>-3583.536194</td>\n",
-       "      <td>0.580260</td>\n",
-       "      <td>0.110898</td>\n",
-       "      <td>0.096652</td>\n",
+       "      <td>A10VR_Pre</td>\n",
+       "      <td>0.000048</td>\n",
+       "      <td>21038</td>\n",
+       "      <td>-3569.146897</td>\n",
+       "      <td>-3569.094997</td>\n",
+       "      <td>-3569.043657</td>\n",
+       "      <td>-3569.043328</td>\n",
+       "      <td>-3569.043342</td>\n",
+       "      <td>0.000065</td>\n",
+       "      <td>10436.357143</td>\n",
+       "      <td>5744.139101</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>A102C_Post</td>\n",
-       "      <td>-0.000250</td>\n",
-       "      <td>54</td>\n",
-       "      <td>99.333333</td>\n",
-       "      <td>-3539.821289</td>\n",
-       "      <td>-3543.072045</td>\n",
-       "      <td>-3534.301782</td>\n",
-       "      <td>-3539.874022</td>\n",
-       "      <td>2.144971</td>\n",
-       "      <td>0.142123</td>\n",
-       "      <td>0.383057</td>\n",
+       "      <td>A111VR_Post</td>\n",
+       "      <td>0.009218</td>\n",
+       "      <td>28530</td>\n",
+       "      <td>-3406.362433</td>\n",
+       "      <td>-3390.073342</td>\n",
+       "      <td>-3290.373454</td>\n",
+       "      <td>-3268.000032</td>\n",
+       "      <td>-3280.875522</td>\n",
+       "      <td>8.477340</td>\n",
+       "      <td>12441.318182</td>\n",
+       "      <td>7939.364506</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -390,81 +399,81 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>73</th>\n",
-       "      <td>A97V_Pre</td>\n",
-       "      <td>0.000031</td>\n",
-       "      <td>58</td>\n",
-       "      <td>121.913793</td>\n",
-       "      <td>-3603.559400</td>\n",
-       "      <td>-3604.508936</td>\n",
-       "      <td>-3601.994088</td>\n",
-       "      <td>-3603.595261</td>\n",
-       "      <td>0.476122</td>\n",
-       "      <td>0.110325</td>\n",
-       "      <td>0.191659</td>\n",
+       "      <td>A6VR_Pre</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>22824</td>\n",
+       "      <td>-3596.815066</td>\n",
+       "      <td>-3596.722002</td>\n",
+       "      <td>-3596.647964</td>\n",
+       "      <td>-3596.646488</td>\n",
+       "      <td>-3596.647910</td>\n",
+       "      <td>0.000251</td>\n",
+       "      <td>11601.210526</td>\n",
+       "      <td>6811.938484</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>74</th>\n",
-       "      <td>A98C_Post</td>\n",
-       "      <td>0.000031</td>\n",
-       "      <td>62</td>\n",
-       "      <td>130.693548</td>\n",
-       "      <td>-3599.743775</td>\n",
-       "      <td>-3600.087921</td>\n",
-       "      <td>-3599.209063</td>\n",
-       "      <td>-3599.737885</td>\n",
-       "      <td>0.167568</td>\n",
-       "      <td>0.052724</td>\n",
-       "      <td>0.037903</td>\n",
+       "      <td>A7VR_Post</td>\n",
+       "      <td>-0.000239</td>\n",
+       "      <td>12575</td>\n",
+       "      <td>-3558.816779</td>\n",
+       "      <td>-3558.619134</td>\n",
+       "      <td>-3558.706819</td>\n",
+       "      <td>-3558.706496</td>\n",
+       "      <td>-3558.706675</td>\n",
+       "      <td>0.000058</td>\n",
+       "      <td>5563.235294</td>\n",
+       "      <td>3613.394502</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75</th>\n",
-       "      <td>A98C_Pre</td>\n",
-       "      <td>0.000063</td>\n",
-       "      <td>63</td>\n",
-       "      <td>117.412698</td>\n",
-       "      <td>-3604.840092</td>\n",
-       "      <td>-3605.938200</td>\n",
-       "      <td>-3604.194886</td>\n",
-       "      <td>-3604.850612</td>\n",
-       "      <td>0.388117</td>\n",
-       "      <td>0.140205</td>\n",
-       "      <td>0.129284</td>\n",
+       "      <td>A7VR_Pre</td>\n",
+       "      <td>-0.000166</td>\n",
+       "      <td>12025</td>\n",
+       "      <td>-3557.255106</td>\n",
+       "      <td>-3557.213732</td>\n",
+       "      <td>-3557.481403</td>\n",
+       "      <td>-3557.481099</td>\n",
+       "      <td>-3557.481329</td>\n",
+       "      <td>0.000130</td>\n",
+       "      <td>6195.000000</td>\n",
+       "      <td>3508.613461</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76</th>\n",
-       "      <td>A99V_Post</td>\n",
-       "      <td>0.000031</td>\n",
-       "      <td>49</td>\n",
-       "      <td>132.530612</td>\n",
-       "      <td>-3584.026729</td>\n",
-       "      <td>-3593.857332</td>\n",
-       "      <td>-3582.875829</td>\n",
-       "      <td>-3584.108633</td>\n",
-       "      <td>1.779346</td>\n",
-       "      <td>0.222968</td>\n",
-       "      <td>0.586615</td>\n",
+       "      <td>A9VR_Post</td>\n",
+       "      <td>-0.000110</td>\n",
+       "      <td>18161</td>\n",
+       "      <td>-3593.648570</td>\n",
+       "      <td>-3593.602399</td>\n",
+       "      <td>-3593.820416</td>\n",
+       "      <td>-3593.820050</td>\n",
+       "      <td>-3593.820059</td>\n",
+       "      <td>0.000055</td>\n",
+       "      <td>8712.783784</td>\n",
+       "      <td>5383.168047</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>77</th>\n",
-       "      <td>A99V_Pre</td>\n",
-       "      <td>0.000063</td>\n",
-       "      <td>61</td>\n",
-       "      <td>135.852459</td>\n",
-       "      <td>-3590.726461</td>\n",
-       "      <td>-3592.050770</td>\n",
-       "      <td>-3588.779537</td>\n",
-       "      <td>-3590.721013</td>\n",
-       "      <td>0.764797</td>\n",
-       "      <td>0.096649</td>\n",
-       "      <td>0.158742</td>\n",
+       "      <td>A9VR_Pre</td>\n",
+       "      <td>0.000052</td>\n",
+       "      <td>19133</td>\n",
+       "      <td>-3593.949411</td>\n",
+       "      <td>-3593.895500</td>\n",
+       "      <td>-3593.635039</td>\n",
+       "      <td>-3593.634720</td>\n",
+       "      <td>-3593.634941</td>\n",
+       "      <td>0.000148</td>\n",
+       "      <td>10274.233333</td>\n",
+       "      <td>5002.647404</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -474,31 +483,31 @@
        "</div>"
       ],
       "text/plain": [
-       "     data_name      diff startle    duration  average_filter     mini_scr  \\\n",
-       "0   A100C_Post  0.000063      61  134.770492    -3583.358189 -3584.635388   \n",
-       "1    A100C_Pre  0.000063      54  164.796296    -3594.970028 -3602.947562   \n",
-       "2   A101V_Post  0.000375      29  138.620690    -3483.293143 -3496.745411   \n",
-       "3    A101V_Pre -0.000031      61  125.573770    -3583.496463 -3584.515202   \n",
-       "4   A102C_Post -0.000250      54   99.333333    -3539.821289 -3543.072045   \n",
-       "..         ...       ...     ...         ...             ...          ...   \n",
-       "73    A97V_Pre  0.000031      58  121.913793    -3603.559400 -3604.508936   \n",
-       "74   A98C_Post  0.000031      62  130.693548    -3599.743775 -3600.087921   \n",
-       "75    A98C_Pre  0.000063      63  117.412698    -3604.840092 -3605.938200   \n",
-       "76   A99V_Post  0.000031      49  132.530612    -3584.026729 -3593.857332   \n",
-       "77    A99V_Pre  0.000063      61  135.852459    -3590.726461 -3592.050770   \n",
+       "      data_name      diff startle     duration  average_filter     mini_scr  \\\n",
+       "0   A107VR_Post -0.000105   28691 -3585.320182    -3585.180548 -3586.220854   \n",
+       "1    A107VR_Pre  0.000110   27309 -3592.435774    -3592.229085 -3590.603300   \n",
+       "2    A10VR_Post  0.000094   21384 -3568.960999    -3568.876654 -3568.915714   \n",
+       "3     A10VR_Pre  0.000048   21038 -3569.146897    -3569.094997 -3569.043657   \n",
+       "4   A111VR_Post  0.009218   28530 -3406.362433    -3390.073342 -3290.373454   \n",
+       "..          ...       ...     ...          ...             ...          ...   \n",
+       "73     A6VR_Pre  0.000000   22824 -3596.815066    -3596.722002 -3596.647964   \n",
+       "74    A7VR_Post -0.000239   12575 -3558.816779    -3558.619134 -3558.706819   \n",
+       "75     A7VR_Pre -0.000166   12025 -3557.255106    -3557.213732 -3557.481403   \n",
+       "76    A9VR_Post -0.000110   18161 -3593.648570    -3593.602399 -3593.820416   \n",
+       "77     A9VR_Pre  0.000052   19133 -3593.949411    -3593.895500 -3593.635039   \n",
        "\n",
-       "       maxi_scr  average_scr    std_scr  average_ampl  std_ampl addictLabel  \\\n",
-       "0  -3582.542013 -3583.326907   0.571061      0.119507  0.138504           1   \n",
-       "1  -3591.435967 -3594.891820   2.228752      0.560979  1.072982           1   \n",
-       "2  -3460.077017 -3483.226101  10.858705      1.586332  5.138217           1   \n",
-       "3  -3582.359135 -3583.536194   0.580260      0.110898  0.096652           1   \n",
-       "4  -3534.301782 -3539.874022   2.144971      0.142123  0.383057           1   \n",
-       "..          ...          ...        ...           ...       ...         ...   \n",
-       "73 -3601.994088 -3603.595261   0.476122      0.110325  0.191659           1   \n",
-       "74 -3599.209063 -3599.737885   0.167568      0.052724  0.037903           1   \n",
-       "75 -3604.194886 -3604.850612   0.388117      0.140205  0.129284           1   \n",
-       "76 -3582.875829 -3584.108633   1.779346      0.222968  0.586615           1   \n",
-       "77 -3588.779537 -3590.721013   0.764797      0.096649  0.158742           1   \n",
+       "       maxi_scr  average_scr   std_scr  average_ampl     std_ampl addictLabel  \\\n",
+       "0  -3586.218921 -3586.219654  0.000605  14373.236842  8142.849865           1   \n",
+       "1  -3590.587707 -3590.593709  0.004269  12568.222222  7615.645085           1   \n",
+       "2  -3568.913622 -3568.914792  0.001039  10971.125000  5969.161786           1   \n",
+       "3  -3569.043328 -3569.043342  0.000065  10436.357143  5744.139101           1   \n",
+       "4  -3268.000032 -3280.875522  8.477340  12441.318182  7939.364506           1   \n",
+       "..          ...          ...       ...           ...          ...         ...   \n",
+       "73 -3596.646488 -3596.647910  0.000251  11601.210526  6811.938484           1   \n",
+       "74 -3558.706496 -3558.706675  0.000058   5563.235294  3613.394502           1   \n",
+       "75 -3557.481099 -3557.481329  0.000130   6195.000000  3508.613461           1   \n",
+       "76 -3593.820050 -3593.820059  0.000055   8712.783784  5383.168047           1   \n",
+       "77 -3593.634720 -3593.634941  0.000148  10274.233333  5002.647404           1   \n",
        "\n",
        "   stateLabel  \n",
        "0           2  \n",
@@ -516,24 +525,21 @@
        "[78 rows x 13 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "feature.to_csv('Feature3group/GSR.csv')\n",
+    "feature.to_csv('FeatureBC&AC/BC/GSR_test.csv')\n",
     "# feature.sort_values(by=['stateLabel', 'data_name'])\n",
     "feature"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "6a045f9b3a72ed6f030051865b53511e76599d86589414e61ea9eb31d3e28267"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "venv (3.11.5)",
    "language": "python",
    "name": "python3"
   },
@@ -547,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
