--- a/GSRPreProcess.ipynb
+++ b/GSRPreProcess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "sampleRate = 256\n",
-    "amp = 0.001\n",
+    "amp = 0.000000001\n",
     "\n",
     "feature_names=['diff' ,'startle', 'duration', \n",
     "            'average_filter', 'mini_scr', 'maxi_scr', \n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,12 +64,20 @@
     "    scr = list(scr)\n",
     "    # print(scr)  #2維  5個一維   前2個個數相同 後3個個數相同\n",
     "\n",
-    "    ts           = scr[0]  # array   Signal time axis reference (seconds).\n",
-    "    filtered     = scr[1]  # array   Filtered EDA signal.\n",
-    "    onsets_index = scr[2]  # array   Indices of SCR pulse onsets.\n",
-    "    peaks_index  = scr[3]  # array   Indices of the SCR peaks.\n",
-    "    amplitudes   = scr[4]  # array   SCR pulse amplitudes.\n",
-    "\n",
+    "    #ts           = scr[0]  # array   Signal time axis reference (seconds).\n",
+    "    #filtered     = scr[1]  # array   Filtered EDA signal.\n",
+    "    #onsets_index = scr[2]  # array   Indices of SCR pulse onsets.\n",
+    "    #peaks_index  = scr[3]  # array   Indices of the SCR peaks.\n",
+    "    #amplitudes   = scr[4]  # array   SCR pulse amplitudes.\n",
+    "# --- 核心修正：根據您 print 的 11 個陣列的輸出 ---\n",
+    "    ts           = scr[0]\n",
+    "    filtered     = scr[1]\n",
+    "    # scr[2] 和 scr[3] 是我們不需要的訊號\n",
+    "    onsets_index = scr[4] # <- 真正的 Onset 索引\n",
+    "    peaks_index  = scr[5] # <- 真正的 Peak 索引\n",
+    "    amplitudes   = scr[6] # <- 真正的 Amplitudes\n",
+    "    # scr[7] 到 scr[10] 我們目前不需要\n",
+    "    # ----------------------------------------------\n",
     "    onsets = []\n",
     "    peaks = []\n",
     "    for o_i in onsets_index:\n",
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kein9\\AppData\\Local\\Temp\\ipykernel_24004\\1510505746.py:34: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\kein9\\AppData\\Local\\Temp\\ipykernel_31312\\1510505746.py:34: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  result = pd.concat([result, pd.DataFrame(features, index=[0])], axis=0, ignore_index=True)\n"
      ]
     }
@@ -261,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -305,15 +313,15 @@
        "      <th>0</th>\n",
        "      <td>A107VR_Post</td>\n",
        "      <td>-0.000105</td>\n",
-       "      <td>28691</td>\n",
-       "      <td>-3585.320182</td>\n",
+       "      <td>40</td>\n",
+       "      <td>261.375000</td>\n",
        "      <td>-3585.180548</td>\n",
-       "      <td>-3586.220854</td>\n",
-       "      <td>-3586.218921</td>\n",
-       "      <td>-3586.219654</td>\n",
-       "      <td>0.000605</td>\n",
-       "      <td>14373.236842</td>\n",
-       "      <td>8142.849865</td>\n",
+       "      <td>-3586.367925</td>\n",
+       "      <td>-3582.304162</td>\n",
+       "      <td>-3585.130437</td>\n",
+       "      <td>0.971015</td>\n",
+       "      <td>0.140059</td>\n",
+       "      <td>0.411963</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -321,15 +329,15 @@
        "      <th>1</th>\n",
        "      <td>A107VR_Pre</td>\n",
        "      <td>0.000110</td>\n",
-       "      <td>27309</td>\n",
-       "      <td>-3592.435774</td>\n",
+       "      <td>36</td>\n",
+       "      <td>372.972222</td>\n",
        "      <td>-3592.229085</td>\n",
-       "      <td>-3590.603300</td>\n",
-       "      <td>-3590.587707</td>\n",
-       "      <td>-3590.593709</td>\n",
-       "      <td>0.004269</td>\n",
-       "      <td>12568.222222</td>\n",
-       "      <td>7615.645085</td>\n",
+       "      <td>-3595.607872</td>\n",
+       "      <td>-3589.417715</td>\n",
+       "      <td>-3592.178221</td>\n",
+       "      <td>1.383017</td>\n",
+       "      <td>0.398479</td>\n",
+       "      <td>0.498805</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -337,15 +345,15 @@
        "      <th>2</th>\n",
        "      <td>A10VR_Post</td>\n",
        "      <td>0.000094</td>\n",
-       "      <td>21384</td>\n",
-       "      <td>-3568.960999</td>\n",
+       "      <td>32</td>\n",
+       "      <td>341.625000</td>\n",
        "      <td>-3568.876654</td>\n",
-       "      <td>-3568.915714</td>\n",
-       "      <td>-3568.913622</td>\n",
-       "      <td>-3568.914792</td>\n",
-       "      <td>0.001039</td>\n",
-       "      <td>10971.125000</td>\n",
-       "      <td>5969.161786</td>\n",
+       "      <td>-3569.088967</td>\n",
+       "      <td>-3568.015411</td>\n",
+       "      <td>-3568.811888</td>\n",
+       "      <td>0.307883</td>\n",
+       "      <td>0.115656</td>\n",
+       "      <td>0.145591</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -353,15 +361,15 @@
        "      <th>3</th>\n",
        "      <td>A10VR_Pre</td>\n",
        "      <td>0.000048</td>\n",
-       "      <td>21038</td>\n",
-       "      <td>-3569.146897</td>\n",
+       "      <td>29</td>\n",
+       "      <td>369.448276</td>\n",
        "      <td>-3569.094997</td>\n",
-       "      <td>-3569.043657</td>\n",
-       "      <td>-3569.043328</td>\n",
-       "      <td>-3569.043342</td>\n",
-       "      <td>0.000065</td>\n",
-       "      <td>10436.357143</td>\n",
-       "      <td>5744.139101</td>\n",
+       "      <td>-3569.208625</td>\n",
+       "      <td>-3568.877820</td>\n",
+       "      <td>-3569.024004</td>\n",
+       "      <td>0.085508</td>\n",
+       "      <td>0.090050</td>\n",
+       "      <td>0.058264</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -369,15 +377,15 @@
        "      <th>4</th>\n",
        "      <td>A111VR_Post</td>\n",
        "      <td>0.009218</td>\n",
-       "      <td>28530</td>\n",
-       "      <td>-3406.362433</td>\n",
+       "      <td>22</td>\n",
+       "      <td>626.363636</td>\n",
        "      <td>-3390.073342</td>\n",
-       "      <td>-3290.373454</td>\n",
-       "      <td>-3268.000032</td>\n",
-       "      <td>-3280.875522</td>\n",
-       "      <td>8.477340</td>\n",
-       "      <td>12441.318182</td>\n",
-       "      <td>7939.364506</td>\n",
+       "      <td>-3563.997576</td>\n",
+       "      <td>-3188.329459</td>\n",
+       "      <td>-3377.801212</td>\n",
+       "      <td>140.219439</td>\n",
+       "      <td>38.950997</td>\n",
+       "      <td>43.609266</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -401,15 +409,15 @@
        "      <th>73</th>\n",
        "      <td>A6VR_Pre</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>22824</td>\n",
-       "      <td>-3596.815066</td>\n",
+       "      <td>39</td>\n",
+       "      <td>290.000000</td>\n",
        "      <td>-3596.722002</td>\n",
-       "      <td>-3596.647964</td>\n",
-       "      <td>-3596.646488</td>\n",
-       "      <td>-3596.647910</td>\n",
-       "      <td>0.000251</td>\n",
-       "      <td>11601.210526</td>\n",
-       "      <td>6811.938484</td>\n",
+       "      <td>-3596.748869</td>\n",
+       "      <td>-3596.573953</td>\n",
+       "      <td>-3596.650503</td>\n",
+       "      <td>0.045665</td>\n",
+       "      <td>0.109250</td>\n",
+       "      <td>0.273637</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -417,15 +425,15 @@
        "      <th>74</th>\n",
        "      <td>A7VR_Post</td>\n",
        "      <td>-0.000239</td>\n",
-       "      <td>12575</td>\n",
-       "      <td>-3558.816779</td>\n",
+       "      <td>17</td>\n",
+       "      <td>250.882353</td>\n",
        "      <td>-3558.619134</td>\n",
-       "      <td>-3558.706819</td>\n",
-       "      <td>-3558.706496</td>\n",
-       "      <td>-3558.706675</td>\n",
-       "      <td>0.000058</td>\n",
-       "      <td>5563.235294</td>\n",
-       "      <td>3613.394502</td>\n",
+       "      <td>-3559.271318</td>\n",
+       "      <td>-3557.168119</td>\n",
+       "      <td>-3558.389482</td>\n",
+       "      <td>0.524148</td>\n",
+       "      <td>0.276676</td>\n",
+       "      <td>0.522162</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -433,15 +441,15 @@
        "      <th>75</th>\n",
        "      <td>A7VR_Pre</td>\n",
        "      <td>-0.000166</td>\n",
-       "      <td>12025</td>\n",
-       "      <td>-3557.255106</td>\n",
+       "      <td>21</td>\n",
+       "      <td>220.285714</td>\n",
        "      <td>-3557.213732</td>\n",
-       "      <td>-3557.481403</td>\n",
-       "      <td>-3557.481099</td>\n",
-       "      <td>-3557.481329</td>\n",
-       "      <td>0.000130</td>\n",
-       "      <td>6195.000000</td>\n",
-       "      <td>3508.613461</td>\n",
+       "      <td>-3557.705033</td>\n",
+       "      <td>-3556.775064</td>\n",
+       "      <td>-3557.203434</td>\n",
+       "      <td>0.310459</td>\n",
+       "      <td>0.049222</td>\n",
+       "      <td>0.045614</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -449,15 +457,15 @@
        "      <th>76</th>\n",
        "      <td>A9VR_Post</td>\n",
        "      <td>-0.000110</td>\n",
-       "      <td>18161</td>\n",
-       "      <td>-3593.648570</td>\n",
+       "      <td>37</td>\n",
+       "      <td>245.297297</td>\n",
        "      <td>-3593.602399</td>\n",
-       "      <td>-3593.820416</td>\n",
-       "      <td>-3593.820050</td>\n",
-       "      <td>-3593.820059</td>\n",
-       "      <td>0.000055</td>\n",
-       "      <td>8712.783784</td>\n",
-       "      <td>5383.168047</td>\n",
+       "      <td>-3594.039121</td>\n",
+       "      <td>-3593.240437</td>\n",
+       "      <td>-3593.551450</td>\n",
+       "      <td>0.215573</td>\n",
+       "      <td>0.048488</td>\n",
+       "      <td>0.037172</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -465,15 +473,15 @@
        "      <th>77</th>\n",
        "      <td>A9VR_Pre</td>\n",
        "      <td>0.000052</td>\n",
-       "      <td>19133</td>\n",
-       "      <td>-3593.949411</td>\n",
+       "      <td>30</td>\n",
+       "      <td>354.733333</td>\n",
        "      <td>-3593.895500</td>\n",
-       "      <td>-3593.635039</td>\n",
-       "      <td>-3593.634720</td>\n",
-       "      <td>-3593.634941</td>\n",
-       "      <td>0.000148</td>\n",
-       "      <td>10274.233333</td>\n",
-       "      <td>5002.647404</td>\n",
+       "      <td>-3594.138322</td>\n",
+       "      <td>-3593.513672</td>\n",
+       "      <td>-3593.783608</td>\n",
+       "      <td>0.161747</td>\n",
+       "      <td>0.089177</td>\n",
+       "      <td>0.076936</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -483,31 +491,31 @@
        "</div>"
       ],
       "text/plain": [
-       "      data_name      diff startle     duration  average_filter     mini_scr  \\\n",
-       "0   A107VR_Post -0.000105   28691 -3585.320182    -3585.180548 -3586.220854   \n",
-       "1    A107VR_Pre  0.000110   27309 -3592.435774    -3592.229085 -3590.603300   \n",
-       "2    A10VR_Post  0.000094   21384 -3568.960999    -3568.876654 -3568.915714   \n",
-       "3     A10VR_Pre  0.000048   21038 -3569.146897    -3569.094997 -3569.043657   \n",
-       "4   A111VR_Post  0.009218   28530 -3406.362433    -3390.073342 -3290.373454   \n",
-       "..          ...       ...     ...          ...             ...          ...   \n",
-       "73     A6VR_Pre  0.000000   22824 -3596.815066    -3596.722002 -3596.647964   \n",
-       "74    A7VR_Post -0.000239   12575 -3558.816779    -3558.619134 -3558.706819   \n",
-       "75     A7VR_Pre -0.000166   12025 -3557.255106    -3557.213732 -3557.481403   \n",
-       "76    A9VR_Post -0.000110   18161 -3593.648570    -3593.602399 -3593.820416   \n",
-       "77     A9VR_Pre  0.000052   19133 -3593.949411    -3593.895500 -3593.635039   \n",
+       "      data_name      diff startle    duration  average_filter     mini_scr  \\\n",
+       "0   A107VR_Post -0.000105      40  261.375000    -3585.180548 -3586.367925   \n",
+       "1    A107VR_Pre  0.000110      36  372.972222    -3592.229085 -3595.607872   \n",
+       "2    A10VR_Post  0.000094      32  341.625000    -3568.876654 -3569.088967   \n",
+       "3     A10VR_Pre  0.000048      29  369.448276    -3569.094997 -3569.208625   \n",
+       "4   A111VR_Post  0.009218      22  626.363636    -3390.073342 -3563.997576   \n",
+       "..          ...       ...     ...         ...             ...          ...   \n",
+       "73     A6VR_Pre  0.000000      39  290.000000    -3596.722002 -3596.748869   \n",
+       "74    A7VR_Post -0.000239      17  250.882353    -3558.619134 -3559.271318   \n",
+       "75     A7VR_Pre -0.000166      21  220.285714    -3557.213732 -3557.705033   \n",
+       "76    A9VR_Post -0.000110      37  245.297297    -3593.602399 -3594.039121   \n",
+       "77     A9VR_Pre  0.000052      30  354.733333    -3593.895500 -3594.138322   \n",
        "\n",
-       "       maxi_scr  average_scr   std_scr  average_ampl     std_ampl addictLabel  \\\n",
-       "0  -3586.218921 -3586.219654  0.000605  14373.236842  8142.849865           1   \n",
-       "1  -3590.587707 -3590.593709  0.004269  12568.222222  7615.645085           1   \n",
-       "2  -3568.913622 -3568.914792  0.001039  10971.125000  5969.161786           1   \n",
-       "3  -3569.043328 -3569.043342  0.000065  10436.357143  5744.139101           1   \n",
-       "4  -3268.000032 -3280.875522  8.477340  12441.318182  7939.364506           1   \n",
-       "..          ...          ...       ...           ...          ...         ...   \n",
-       "73 -3596.646488 -3596.647910  0.000251  11601.210526  6811.938484           1   \n",
-       "74 -3558.706496 -3558.706675  0.000058   5563.235294  3613.394502           1   \n",
-       "75 -3557.481099 -3557.481329  0.000130   6195.000000  3508.613461           1   \n",
-       "76 -3593.820050 -3593.820059  0.000055   8712.783784  5383.168047           1   \n",
-       "77 -3593.634720 -3593.634941  0.000148  10274.233333  5002.647404           1   \n",
+       "       maxi_scr  average_scr     std_scr  average_ampl   std_ampl addictLabel  \\\n",
+       "0  -3582.304162 -3585.130437    0.971015      0.140059   0.411963           1   \n",
+       "1  -3589.417715 -3592.178221    1.383017      0.398479   0.498805           1   \n",
+       "2  -3568.015411 -3568.811888    0.307883      0.115656   0.145591           1   \n",
+       "3  -3568.877820 -3569.024004    0.085508      0.090050   0.058264           1   \n",
+       "4  -3188.329459 -3377.801212  140.219439     38.950997  43.609266           1   \n",
+       "..          ...          ...         ...           ...        ...         ...   \n",
+       "73 -3596.573953 -3596.650503    0.045665      0.109250   0.273637           1   \n",
+       "74 -3557.168119 -3558.389482    0.524148      0.276676   0.522162           1   \n",
+       "75 -3556.775064 -3557.203434    0.310459      0.049222   0.045614           1   \n",
+       "76 -3593.240437 -3593.551450    0.215573      0.048488   0.037172           1   \n",
+       "77 -3593.513672 -3593.783608    0.161747      0.089177   0.076936           1   \n",
        "\n",
        "   stateLabel  \n",
        "0           2  \n",
@@ -525,7 +533,7 @@
        "[78 rows x 13 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
